# setlocale_examples

./: CMakeLists.txt  README.md  def2utf8.c  setlocale_default.c  setlocale_utf8.c  utf8_emoji.c
